--- a/formularios/eliminar.html
+++ b/formularios/eliminar.html
@@ -21,7 +21,7 @@
 
             <div class="register-form">
                 <a href="registrarse.html"><button type="button">Registrarse</button></a>
-                <a href="login.html"><button type="button">Iniciar Sesión</button></a>
+                <a href="index.html"><button type="button">Iniciar Sesión</button></a>
             </div>
         </form>
     </div>
