--- a/formularios/registrarse.html
+++ b/formularios/registrarse.html
@@ -45,7 +45,7 @@
         <button type="submit" name="register">Registrar</button>
         <br><br>
         <div class="additional-actions">
-            <a href="login.html"><button type="button">Iniciar Sesión</button></a>
+            <a href="index.html"><button type="button">Iniciar Sesión</button></a>
             <a href="eliminar.html"><button type="button">Eliminar</button></a>
         </div>
     </form>
